# ipu-room

./: .gitignore  .travis.yml  API.md  README.md  client.local.sh  database-controller.local.sh  database_controller.local.sh  local.minikube.sh  package.json  postgres.local.sh  reverse-proxy.local.sh  web-socket-server.local.sh
backend/: Dockerfile  Dockerfile-compiler  docker-compose.yml  gulpfile.js  package-lock.json  package.json  tsconfig.json  typedoc.js
client/: .babelrc  .env.development  .env.production  Dockerfile  Dockerfile-build  Dockerfile-cd  README.md  docker-compose.yml  jest.config.js  package.json  (+4 more)
database_controller/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  client.py  docker-compose.yaml  entry.sh  teardown.local.sh
database_controller/migrations/2019-06-03-033930_plugin/: down.sql  up.sql
database_controller/src/: main.rs  model.rs  schema.rs  v1.rs  v2.rs
database_controller/src/v1/: active_plugin.rs  plugin.rs  room.rs  user.rs
web-socket-server/src/: .dockerignore  .env  Dockerfile  entry.sh  pyproject.toml  server.py
web-socket-server/src/app/: __init__.py  config.py  handler.py  model.py  utils.py
web-socket-server/src/app/model/: __init__.py  active_plugin.py  plugin.py  room.py  user.py
web-socket-server/src/app/models/: __init__.py  comment.py  config.py
web-socket-server/src/app/plugin/: compiler_test.py
web-socket-server/src/app/plugin_compiler/: __init__.py  compiler.py  compiler_test.py
web-socket-server/src/app/socketio_handler/: __init__.py  common.py  plugin.py  room.py
web-socket-server/tests/: README.md  config.py  counter.ipl  hge_test_plugin_handler.py  pyproject.toml  test_common_handler.py  test_handler.py  test_plugin_handler.py  test_room_handler.py  test_socketio_handler.py
(+425 files in other folders)
