[tool.poetry]
name = "web-socket-server_src"
version = "0.1.1"
description = "web-socket-server src"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-cors = "^3.0"
flask-socketio = "^4.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
